

Version 1.4.1

* Fixed CycleIterator#hasNext bug

* Fixed EachLineIterator#next bug

* Changed UnsupportedOperationException to IllegalStateException in RubyIO

* Changed NoSuchElementException to IllegalArgumentException in RubyIO

* Overrode toString() methods of all Iterables

* Made RubyArray#push accept varargs

* Fixed the bug of RubyArray#delete which happens while deleting null objects

* Fixed the bugs of RubyArray#assoc & RubyArray#rassoc while encountering null objects

* Fixed the bugs of RubyHash#rassoc & RubyHash#key while encountering null objects

* Fixed the bug of RubyEnumerable#sortBy ordering

* Increased acceptable comparators of RubyEnumerable#sort & RubyEnumerable#sortBy

* Increased acceptable comparators of RubyArray#sortByǃ

* Changed RubyHash entries to ComparableEntry

* Fixed the bug of RubyFile#join

* Made RubyArray Comparable


Version 1.4.2

* Changed all returned ComparableEntry to Entry

* Changed all Iterable<ComparableEntry<K, V>> to Iterable<Entry<K, V>> 

* Changed all Iterator<ComparableEntry<K, V>> to Iterator<Entry<K, V>> 


Version 1.5.0

+ Implemented RubyEnumerable#lazy

+ Added freeze() & frozen?() to RubyArray & RubyHash

* Checked 'false' in RubyEnumerable#all? & RubyEnumerable#any?

+ Added RubyArray#collectǃ & RubyArray#mapǃ


Version 1.5.1

* Changed LazyRubyEnumerator to RubyLazyEnumerator


Version 1.5.2

- Removed RubyEnumerable#sort(Comparator comp) to adapt new Java8 List Interface

* Fixed the bug of RubyIO UTF reading & writing

* Fixed RubyFile#join bug on Windows


Version 1.5.3

* Auto close the InputStream if an EachLineIterator reaches to the end

* RubyIO#foreach can now take no block and return a RubyEnumerator

* RubyEnumerable#collect & RubyEnumerable#map can now take method name

* RubyArray#valuesAt & RubyHash#valuesAt can now take Iterable

* RubyCollections#Hash can now take RubyArray of List


Version 1.5.4

* Made RubyEnumerable#collectConcat & RubyEnumerable#flatMap more generic